# h-sdl2

./: .gitmodules  CMakeLists.txt  Generator.hx  README.md  generate.hxml  generate.sh  haxelib.json  setup.sh
generator/: Generator.hx
lib/sdl/: Cursor.hx  GL.hx  Native.hx  Sdl.hx  Window.hx  WindowGL.hx  WindowMetal.hx  sdl2.idl
src/: hlsdl_sdl.cpp  hlsdl_sdl.h  hsdl_defines.h  hsdl_types.h
src/hl/: sdl2.cpp
src/jvm/: sdl2.cpp
test/: SampleMain.hx  compile.cpp.hxml  compile.hl.hxml
